Mobile layout issues

--- a/resources/sass/_base.scss
+++ b/resources/sass/_base.scss
@@ -181,7 +181,7 @@ input[type="checkbox"] {
 .half-split {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-gap: 1rem;
+    gap: 1rem;
     justify-content: space-between;
     margin: 2rem auto;
 }
@@ -189,7 +189,7 @@ input[type="checkbox"] {
 .third-split {
     display: grid;
     grid-template-columns: 1fr 2fr;
-    grid-gap: 2rem;
+    gap: 2rem;
     margin: 2rem auto;
     align-items: center;
 }
