--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -280,7 +280,7 @@
 #feed {
     display: grid;
     grid-template-columns: 15vw 1fr;
-    grid-gap: 1rem;
+    gap: 1rem;
 
     h2 {
         font-weight: 800;
